<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_t_t"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/exitDiscription"
            android:focusable="true"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_exit_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/androidImg"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_android_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middle"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top1">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:text="@string/header"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/progress_bg"
            android:indeterminate="false"
            android:max="100"
            android:progress="10"
            android:progressDrawable="@drawable/circular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/text_view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar"
            tools:text="60%" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle">

        <TextView
            android:id="@+id/heals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:text="@string/valueHeals"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heals_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:text="4564"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            app:layout_constraintLeft_toRightOf="@+id/heals"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:text="@string/valueTemp"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            app:layout_constraintRight_toRightOf="@+id/heals"
            app:layout_constraintTop_toBottomOf="@+id/heals_value" />

        <TextView
            android:id="@+id/temp_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:text="214"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            app:layout_constraintLeft_toRightOf="@+id/temp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heals" />

        <Switch
            android:id="@+id/switchSilent"
            style="@style/TextAppearance.AppCompat.Widget.Switch"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="7dp"
            android:checked="true"
            android:gravity="center"
            android:padding="10dp"
            android:switchMinWidth="110sp"
            android:text="@string/valueOffVol"
            android:textColor="@color/textColor"
            android:textOff="выкл"
            android:textOn="вкл"
            android:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp"
            app:showText="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info">

        <ImageButton
            android:id="@+id/infoBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/exitDiscription"
            android:focusable="true"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic__notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>